--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,6 +8,12 @@ body {
   scrollbar-width: none; /* Firefox */
 }
 
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.explainationP::-webkit-scrollbar {
+  display: none;
+}
+
 .home h1 {
   text-align: center;
   font-size: 1.5rem;
@@ -84,7 +90,7 @@ button:disabled {
 }
 
 .verse-container p {
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   margin-bottom: 10px;
   color: #555;
 }
